# SCDocBuilder

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  ISSUES.md  PERFORMANCE_REPORT.md  README.md  REVIEW.md  SC - Notice of Proposed SC TEMPLATE - Placeholders.docx  main.py  prd.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_result.docx  test_template.docx
.dev/: AGENTS.md  CONFIG_ISSUES.md  ISSUES.md  NEW_STRUCTURE.md  PERFORMANCE_REPORT.md  PRD.md  REVIEW.md  TASKS.md  TRACEABILITY.md  VERIFICATION_REPORT.md
.dev/ADRs/: 0001-use-poetry-and-src-layout.md
.github/: CODEOWNER
.github/workflows/: agents.yml  ci.yml
ADR/: 20250721-ci-skeleton.md
docs/: README.md  dev_guide.md  errors.md  roadmap.md  scenarios.md  user_guide.md
docs/api/: python.md
input/: SC_worksheet.docx
output/: processed_SC.docx  test_result.docx
perf/artifacts/: README.md
reports/coverage/: README.txt
scripts/: check_structure.py  docker-build.sh  fix_structure.py  next-agent.sh
src/docx/: __init__.py  document.py  shared.py
src/docx/oxml/: __init__.py  ns.py
src/docx/text/: __init__.py  paragraph.py
src/faa_sc_filler/: __init__.py  __main__.py  ai_editor.py  cli.py  config.py  extractor.py  logging.py  processor.py  prompt.py  replacer.py  streamlit_app.py  validator.py  webui.py
src/faa_sc_filler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/faa_sc_replacer/: __init__.py  __main__.py  api.py  benchmark.py  cli.py  config.py  html_export.py  io.py  processing.py  security.py
src/scdocbuilder/: __init__.py  __main__.py  api.py  benchmark.py  cli.py  config.py  html_export.py  io.py  processing.py  security.py  validation.py
templates/: SC_Notice_Template.docx  test_template.docx
tests/: conftest.py  test_ai_editor.py  test_api.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_extra.py  test_determinism.py  test_extractor.py  test_fastapi.py  test_html_export.py  test_import.py  test_io.py  test_io_extra.py  test_logging.py  test_main.py  test_packaging.py  test_performance.py  test_processing.py  test_processing_extra.py  test_processor.py  test_replacement.py  test_replacer.py  test_security.py  test_streamlit_app.py  test_validation.py  test_validator.py  test_webui.py
tests/e2e/features/: batch_mode.feature  cli_argument_parsing.feature  cli_dry_run.feature  conditional_blocks.feature  configurable_schema.feature  docx_traversal.feature  drag_drop_files.feature  html_export.feature  input_validation.feature  keyboard_navigation.feature  logging_levels.feature  missing_q15_validation.feature  multiline_answers.feature  output_auto_naming.feature  performance_benchmark.feature  readme_expansion.feature  reject_macros.feature  web_download_time.feature
tests/property/: strategies.py  test_benchmark_prop.py  test_html_export_prop.py  test_io_properties.py  test_processing_properties.py  test_security_prop.py
tests/unit/: test_benchmark.py  test_html_export.py  test_html_export_mammoth.py  test_io_magic.py  test_security.py  test_validation_helpers.py
