[tool.poetry]
name = "faa-sc-replacer"
version = "0.1.0"
description = "Utility to fill FAA Special Conditions templates from worksheets"
authors = ["FAA Automation Team <dev@example.com>"]
readme = "README.md"
packages = [{include = "faa_sc_replacer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-docx = "^1.1.2"
gradio = "^4.16"
python-dateutil = "^2.9.0"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
hypothesis = "^6.99"
ruff = "^0.4"
black = "^25.1"
mypy = "^1.10"
bandit = "^1.7"
semgrep = "^1.74"
playwright = "^1.43"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", ".dev*"]
