[tool.poetry]
name = "scdocbuilder"
version = "0.1.0"
description = "Utility to fill FAA Special Conditions templates from worksheets"
authors = ["FAA Automation Team <dev@example.com>"]
readme = "README.md"
packages = [{include = "scdocbuilder", from = "src"}]
license = "GPL-3.0-only"

[tool.poetry.scripts]
scdocbuilder = "scdocbuilder.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
python-docx = "^1.1.2"
python-dateutil = "^2.9.0"
rich = "^13.7"
mammoth = "^1.11"
bleach = "^6.1"
python-magic = "^0.4"
fastapi = "^0.116.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
hypothesis = "^6.99"
ruff = "^0.4"
black = "^25.1"
mypy = "^1.10"
bandit = "^1.7"
semgrep = "^1.74"
playwright = "^1.43"
pre-commit = "^3.7"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", ".dev*", "ADR*", "manifests*", "migrations*"]

[tool.mypy]
packages = ["scdocbuilder"]

[[tool.mypy.overrides]]
module = "hypothesis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docx", "docx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["magic", "bleach", "mammoth"]
ignore_missing_imports = true
